@@ -8,26 +8,34 @@ homepage := Some(url("http://github.com/cardamo/play-logback-access"))
 
 licenses := Seq("Apache-2.0" -> url("http://www.apache.org/licenses/LICENSE-2.0"))
 
-version := "0.7.0-SNAPSHOT"
+version := "0.8.0-SNAPSHOT"
 
 libraryDependencies ++= Seq(
-  "com.typesafe.play" %% "play" % "2.8.7",
-  "ch.qos.logback" % "logback-access" % "1.2.3",
-  "javax.servlet" % "javax.servlet-api" % "3.1.0" % Optional
+  "org.playframework" %% "play" % "3.0.1",
+  "ch.qos.logback" % "logback-access" % "1.4.7",
+  "jakarta.servlet" % "jakarta.servlet-api" % "6.0.0" % Optional,
+  //https://github.com/playframework/playframework/releases/tag/2.8.15
+  "com.google.inject"            % "guice"                % "5.1.0",
+  "com.google.inject.extensions" % "guice-assistedinject" % "5.1.0"
 )
 
 libraryDependencies ++= Seq(
-  "org.scalatestplus.play" %% "scalatestplus-play" % "5.1.0" % Test
+  "org.scalatestplus.play" %% "scalatestplus-play" % "7.0.1" % Test,
+  "org.playframework" %% "play-pekko-http-server" % "3.0.1" % Test
 )
 
 scalaVersion := "2.13.5"
-crossScalaVersions := Seq("2.12.10", scalaVersion.value)
 
 scalacOptions ++= Seq("-feature","-deprecation")
 
 publishMavenStyle := true
 
-publishArtifact in Test := false
+Test / publishArtifact  := false
+Test / javaOptions ++= Seq(
+  "--add-exports=java.base/sun.security.x509=ALL-UNNAMED",
+  "--add-opens=java.base/sun.security.ssl=ALL-UNNAMED"
+)
+// Test / fork := true // This is the default anyway, just a reminder in case you changed it to false before
 
 pomIncludeRepository := { _ => false }
 
